[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Room.gd" type="Script" id=1]

[node name="Room" type="Area2D"]
collision_layer = 128
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.43201, 0 )

[node name="CamPoint" type="Position2D" parent="."]

[node name="Checkpoint" type="Position2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Room_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Room_body_exited"]
